--- a/app/src/main/res/layout/fragment_ask_ai.xml
+++ b/app/src/main/res/layout/fragment_ask_ai.xml
@@ -73,6 +73,18 @@
 
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chatRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
+        tools:listitem="@layout/item_chat_user"
+        app:layout_constraintBottom_toTopOf="@+id/textInputCard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/textInputCard"
         android:layout_width="match_parent"
@@ -190,9 +202,9 @@
         android:fontFamily="@font/special_gothic_expanded_semibold"
         android:text="@string/listening"
         android:textAlignment="center"
-        android:visibility="gone"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
