--- a/app/src/main/res/drawable/arrow_right.xml
+++ b/app/src/main/res/drawable/arrow_right.xml
@@ -4,10 +4,11 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
+      android:name="arrow"
       android:pathData="M10,8L14,12L10,16"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#414141"
+      android:strokeColor="@color/white"
       android:strokeLineCap="round"/>
 </vector>
