--- a/app/src/main/res/drawable/check.xml
+++ b/app/src/main/res/drawable/check.xml
@@ -4,10 +4,11 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
+      android:name="check"
       android:pathData="M4,12L8.95,16.95L19.557,6.343"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
+      android:strokeColor="@color/white"
       android:strokeLineCap="round"/>
 </vector>
