--- a/app/src/main/res/layout/fragment_ask_ai.xml
+++ b/app/src/main/res/layout/fragment_ask_ai.xml
@@ -79,11 +79,59 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="24dp"
+        android:visibility="gone"
         tools:listitem="@layout/item_chat_user"
         app:layout_constraintBottom_toTopOf="@+id/textInputCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <LinearLayout
+        android:id="@+id/emptyResponse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/textInputCard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/special_gothic_semiexpanded_bold"
+            android:gravity="center"
+            android:text="@string/what_can_i_help_with"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/prompt1"
+            style="@style/GlassButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/prompt1" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/prompt2"
+            style="@style/GlassButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/prompt2" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/prompt3"
+            style="@style/GlassButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/prompt3" />
+
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/textInputCard"
