--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,12 @@
 
     <color name="white_fix">#FFFFFF</color>
     <color name="red">#F00</color>
+
+    <!-- glass style button colors -->
+    <color name="button_pressed_solid">#33000000</color>
+    <color name="button_pressed_stroke">#55000000</color>
+
+    <color name="button_gradient_start">#1A000000</color>
+    <color name="button_gradient_end">#11000000</color>
+    <color name="button_stroke">#33000000</color>
 </resources>
