--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,4 +79,14 @@
         <item name="android:popupBackground">@drawable/custom_popup_background</item>
     </style>
 
+    <style name="GlassButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_glass_background</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:paddingRight">24dp</item>
+        <item name="android:fontFamily">@font/special_gothic_semiexpanded_semibold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
