--- a/app/src/main/res/layout/fragment_ask_ai.xml
+++ b/app/src/main/res/layout/fragment_ask_ai.xml
@@ -197,6 +197,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/remember"
+                        android:checked="true"
                         android:textSize="12sp"
                         app:checkedIconVisible="false"
                         app:chipCornerRadius="12dp" />
